--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
-    "convert": "node convertData.js"
+    "convert": "node convertData.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d public"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -14,6 +16,7 @@
     "csvtojson": "^2.0.10",
     "d3-geo": "latest",
     "d3-scale": "latest",
+    "gh-pages": "^4.0.0",
     "pixel-borders": "^1.1.4",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
